# Pyon-CLi

./: AVAX_REMOVAL_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_README.md  LICENSE  MIGRATION_SUMMARY.md  POLYGON_MIGRATION_PLAN.md  PYTHON_BEGINNER_GUIDE.md  README.md  pyon.bat  pyon_config.json  pyproject.toml  setup.py
contracts/: Counter.py
examples/: stake_token_examples.py
my_project/: pyon_config.json
my_project/contracts/: BeginnerToken.py  Defi.py  StakeToken.py  VotingContract.py  mint.py
my_project/scripts/: deploy.py
nea/scripts/: deploy.py
pyon_cli/: __init__.py  cli.py  compiler.py  deployer.py  py_contracts.py  shortcuts.py  transpiler.py  utils.py  wallet.py
test_polygon/: pyon_key.json
test_polygon/scripts/: deploy.py
test_project/contracts/: SimpleStorage.py
test_project/scripts/: deploy.py
